added rest API and angularjs frontend

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,7 +16,7 @@ framework:
         resource: '%kernel.project_dir%/app/config/routing.yml'
         strict_requirements: ~
     form: ~
-    csrf_protection: ~
+    #csrf_protection: ~
     validation: { enable_annotations: true }
     #serializer: { enable_annotations: true }
     templating:
@@ -33,6 +33,8 @@ framework:
     php_errors:
         log: true
     translator: { fallbacks: [ "fr" ] }
+    serializer:
+        enabled: true
 
 # Twig Configuration
 twig:
@@ -74,3 +76,47 @@ easy_admin:
     entities:
         Produit:
             class: AppBundle\Entity\User
+lexik_jwt_authentication:
+    private_key_path: '%kernel.root_dir%/../config/jwt/private.pem'
+    public_key_path:  '%kernel.root_dir%/../config/jwt/public.pem'
+    pass_phrase:      'moustique'
+    token_ttl:        3600
+
+fos_rest:
+    routing_loader:
+        include_format: false
+    view:
+        view_response_listener: true
+    format_listener:
+        rules:
+            - { path: '^/api/users', priorities: ['json'], fallback_format: 'json' }
+            - { path: '^/api/user', priorities: ['json'], fallback_format: 'json' }
+            - { path: '^/api/add', priorities: ['json'], fallback_format: 'json' }
+            - { path: '^/api/remove', priorities: ['json'], fallback_format: 'json' }
+            - { path: '^/api/mesMoustiques', priorities: ['json'], fallback_format: 'json' }
+            - { path: '^/api/profile', priorities: ['json'], fallback_format: 'json' }
+            - { path: '^/', priorities: ['html'], fallback_format: 'json' }
+nelmio_cors:
+        defaults:
+            allow_credentials: false
+            allow_origin: []
+            allow_headers: []
+            allow_methods: []
+            expose_headers: []
+            max_age: 0
+            hosts: []
+            origin_regex: false
+            forced_allow_origin_value: ~
+        paths:
+            '^/api/login':
+                allow_origin: ['*']
+                allow_headers: ['*']
+                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+                max_age: 3600
+            '^/api':
+                origin_regex: true
+                allow_origin: ['*']
+                allow_headers: ['*']
+                allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+                max_age: 3600
+                #hosts: ['^api\.']
