--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,6 +10,14 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        api:
+            pattern:   ^/api
+            stateless: true
+            logout:       true
+            anonymous:    true
+            guard:
+                authenticators:
+                    - token_authenticator
         main:
             anonymous: ~
             guard:
@@ -18,3 +26,7 @@ security:
             logout:
                 path: /logout
                 target: /
+    access_control:
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
