--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,3 +8,6 @@ services:
     app.form_login_authenticator:
         class: AppBundle\Security\FormLoginAuthenticator
         arguments: ["@router", "@security.password_encoder"]
+    token_authenticator:
+        class: AppBundle\Security\TokenAuthenticator
+        arguments: ['@lexik_jwt_authentication.encoder.default', '@doctrine.orm.entity_manager']
